css/custom.css
.icon-summary {
  font-size: 14px;
  text-align: center;
  padding-bottom: 40px;
}

.navbar-brand {
  font-size: 26px;
}

.navbar-image {
  width:46px;
  float:left;
  margin-right: 5px;
}

footer, .navbar-custom{
  background-color:white;
}

.main-logo{
  width: 150px;
  top: -15px;
  position: relative;
}

section {
  margin-top: 10px;
}

/*.intro-header{
  margin-top: 90px;
  padding-top: 50px;
  min-height: 550px;
  background: url("/img/bg3.jpg") center;
  background-size: 100% auto;
}*/

.btn {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.btn-sidepadding{
  padding-left: 100px;
  padding-right: 100px;
}

.nav-buttons {
  list-style: none;
  margin-right: -5px;
}

.nav-buttons li {
  float: right;
  margin-left:7px;
  margin-top:7px;
}

.nav-buttons.navbar-left li {
  margin-top:15px;
  padding-left: 30px;
}

.nav-buttons.navbar-left a {
  color: #404040;
}

.container.split-header{
  padding-top: 140px;
  min-height: 650px; 
}


.engine-bg{
  background: url("/img/bg6.jpg") no-repeat center;
  background-size: 100% auto;
  min-height: 330px;
}

.banner-image {
/*  background-image: url("/img/bg7.jpg");
  background-repeat: no-repeat;
  background-position: 100% 0%;
  background-size: contain;*/
  height: 300px;
  background: url("http://res.cloudinary.com/duq3nqdkt/image/upload/v1484772925/MID_tswmxc.gif") no-repeat 85% 70px;
  background-size: 80% auto;
  background-position: right;
}



.main-headline {
  /*color: rgb(83, 148, 221);*/
}

.sub-headline{
  margin-bottom: 10px;
}

.btn-primary {
  background-color: rgb(83, 148, 221);
}

.btn-superlg {
  padding: 14px 20px;
  font-size: 26px;
  line-height: 1.3333333;
  border-radius: 6px;
}

.main-cta {
  margin-top:60px;
}

.main-cta .btn{
  width: 220px;
}

.blue-highlight {
  color: rgb(83, 148, 221);
}

body {
  background-color: #F3F3F3;
}  

.white-bg {
  background-color: white;
}

.icon-summary img {
  width: 450px;
}

section.white-section{
  background-color: white;
  border-radius: 8px;
  padding: 40px;
  margin-top: 30px;
}

section.white-section-small{
  background-color: white;
  border-radius: 8px;
  margin-top: 30px;
  height: 200px;
  padding: 20px;
}

section.section-top-margin {
  margin-top:80px;
}

blockquote {
  border: none;
}

.logoboard img {
  max-height: 70px;

}
.logoboard {
  text-align: center;
  margin-bottom: 45px;
  margin-top: 20px;
}
.logoboard div{
  height: 120px;
}

img.featured-logo{
  height: 110px;
  max-height: 110px;
}

.helper {
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.posts-list {
  margin-top: 100px;
}
.blog-post {
  margin-top: 130px;
}

.plans-summary {
  display: block-inline;
  float: left;
  width: 250px;
  position: relative;
}

.plans-summary li {
  font-size: 10px;
}

.popular {
  text-align: center;
  display: inherit;
}

.col-lg-5 .inner {
  text-align: center;
}

.col-lg-5 .inner ul {
  text-align: left;
}

.inner > ul {
  margin-top: 40px;
  display: inline-block;
}

#plans-summaries-business.col-lg-5 {
   background-color: white;
   margin: 0;

}

#how-it-works.container {
  margin-top: 100px;
}

.pricing-plans-container {
  width: auto;
  float: center;
}

#rcorners-non-caff {
  border-radius: 10px;
    background: #E7B158;
    padding: 20px; 
    width: 200px;
    height: 50px; 
    margin-top: 15px
    text-align: center;
    position: relative;
}

#rcorners-non-caff p, #rcorners-caff p {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0px;
}

#rcorners-caff p {
  color: white;
}

#caffeine_how_it_works_column {
  text-align: center;
}

div#rcorners-non-caff, div#rcorners-caff {
  margin: 15px auto;
}

#why_caffeine_security {
  display: inline-block;
}

#diagram-explanation {
  display: inline-block;
}

#rcorners-caff {
  top: 50%;
  border-radius: 10px;
    background: #4887BB;
    padding: 20px; 
    width: 200px;
    height: 50px; 
    text-align: center;
    position: relative;
}


.beautiful-jekyll-footer .footer-header{
  text-transform: uppercase;
  font-weight: 600;
  text-align: right;
  letter-spacing: 1.5px;
}
.beautiful-jekyll-footer {
  text-align: center;
}

.beautiful-jekyll-footer ul {
  list-style: none;
  padding: 0px; 
  margin: 0px;
}

#register.container {
  margin-top: 150px;
}


/**/

.colorgraph {
  height: 5px;
  border-top: 0;
  background: #c4e17f;
  border-radius: 5px;
  background-image: -webkit-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
  background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
  background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
  background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
}

h1#pricing-header {
  text-align: center;
  font-size: 40px;
}

#benefits-header-page h3 {
  font-weight: 200;
}

.pricing-plan-sub-head {
  margin-top: 2.9em;
}

#plans-summaries-standard .inner ul {
  margin-top: 4.0em;
}

#plans-summaries-premium ul {
  margin-top: 1.8em;
}

#plans-summaries-premium .btn {
  margin-top: 4.7em;
  background-color: #E7B158;
  border-color: #E7B158;
  color: white;
}

#plans-summaries-standard .btn {
  margin-top:  -0.59em;
  background-color: #E7B158;
  border-color: #E7B158;
  color: white;
}

#pricing-tiers {
  margin-top: 4.0em;
  text-align: center;
}

#pricing-section {
  margin-top: 150px;
}

#pricing-tiers .col-lg-4 {
  background-color: white;
  border-radius: 10px;
  border-color: gray;
  border-width: 1px;
  height: 653px;
  overflow: hidden;
}

.pricing-plan-sub-head .price-value {
  font-weight: 600;
  font-size:1.3em;

}

#pricing-title-container {
  margin: -20px;
  height: 100px;
  background-color: #4E8ABB;
  color: white;
}

#pricing-title-container h3 {
    top: 50%;
  position: relative;
  transform: translateY(-50%);
  font-size: 30px;
}

#pricing-tiers li {
  margin-bottom: 20px;
  font-size: 14px;
}

#pricing-section .subtitle, #benefits-section .subtitle {
  text-align: center;
  line-height: 60px;
  font-weight: 200;
}

#sam-davidson-small-face{
  border-radius: 20px;
}



#benefits-section {
  margin-top: 60px;
}

#benefits-section h1 {
  font-size: 50px;
  display: inline;
}

#press-kit-page {
  margin-top: 150px;
}

#customer-page {
  margin-top: 160px;
}

#sub-head-customer {
  font-weight: 300;
}

#first-row-customer {
  text-align: left;
}


#first-row-customer img, #first-row-customer #cheers-quote {
  display: inline;
}

#cheers-quote b {
  padding-left: 5px;
}

#customer-challenge-section {
  display: block;
  margin-top: 30px;
}

#cheers-graph-div  {
  text-align: center;
}

#cheers-graph-div .col-md-6 .customer-circle{
  text-align: center;
  margin: 0 auto;
}

.customer-circle {
  height: 160px;
  width: 160px;
  background-color: #4887BB;
  border-radius: 80px;
}

.customer-circle h2 {
  color: white;
  top: 50%;
  position: relative;
  transform: translateY(-50%);
}

#cheers-sam-quote h2 {
  text-align: center;
  display: inline-table;
}

#benefits-section .col-lg-4 h4 {
  font-weight: 200;
}


#benefits-header-page {
  margin-top: 100px;

}

.subtitle-frontpage {
  font-weight: 400;
}

#benefits-section #img-description {
  margin: 0;
  font-size: 13px;
}

.outlets img {
  max-width: 100%;
  height: auto;
}

.frontpage-header {
  background-image: url("/img/home-banner.jpg");
  background-repeat: no-repeat;
  background-position: 0px 80px;
  background-color: #F3F3F3;
}

.frontpage-header .col-md-6 {
  color: white;
}

.front-page-sub-text {
  font-size: 17px;
}
.force-white-bg{
    background:#ffffff !important;
    padding-top: 60px;
}

